--- a/index.html
+++ b/index.html
@@ -116,128 +116,23 @@
             <i><b>remotos</b></i>.
             </p>
           </header>
-          <div class="cards grid">
-            <div class="card">
-              <div class="title">
-                <h3>I</h3>
-              </div>
-              <div class="content-text">
-                <p>magem linda que me encanta</p>
-              </div>
+          <div class="pagination-container">
+            <!-- Controles de Paginação -->
+            <div class="pagination">
+              <button class="prev" disabled>Anterior</button>
+              <span class="page-indicator">1 / 1</span>
+              <button class="next">Próximo</button>
             </div>
-            <div class="card">
-              <div class="title">
-                <h3>B</h3>
-              </div>
-              <div class="content-text">
-                <p>eijando a serra ao seu redor</p>
-              </div>
+
+            <div class="cards-wrapper">
+              <!-- As páginas de cards serão adicionadas dinamicamente -->
             </div>
-            <div class="card">
-              <div class="title">
-                <h3>I</h3>
-              </div>
-              <div class="content-text">
-                <p>dolatro essa terra querida</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>A</h3>
-              </div>
-              <div class="content-text">
-                <p>inda que eu não esteja só.</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>J</h3>
-              </div>
-              <div class="content-text">
-                <p>amais esquecerei sua doçura</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>A</h3>
-              </div>
-              <div class="content-text">
-                <p> encantar meu coração</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>R</h3>
-              </div>
-              <div class="content-text">
-                <p>ogo a Deus todos os dias por</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>A</h3>
-              </div>
-              <div class="content-text">
-                <p>mor, paz e consolação.</p>
-              </div>
-            </div>
-            <br/>
-            <div class="card">
-              <div class="title">
-                <h3>M</h3>
-              </div>
-              <div class="content-text">
-                <p>iro a tarde no horizonte</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>E</h3>
-              </div>
-              <div class="content-text">
-                <p> sinto meu coração palpitar</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>U</h3>
-              </div>
-              <div class="content-text">
-                <p>ma alegria a me contagiar</p>
-              </div>
-            </div>
-            <br/>
-            <div class="card">
-              <div class="title">
-                <h3>A</h3>
-              </div>
-              <div class="content-text">
-                <p>mo esse lugar enigmático</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>M</h3>
-              </div>
-              <div class="content-text">
-                <p>ístico e varonil</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>O</h3>
-              </div>
-              <div class="content-text">
-                <p>rvalho da minha existência</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="title">
-                <h3>R</h3>
-              </div>
-              <div class="content-text">
-                <p>etrato do meu Brazil.</p>
-              </div>
+          
+            <!-- Controles de Paginação -->
+            <div class="pagination">
+              <button class="prev" disabled>Anterior</button>
+              <span class="page-indicator">1 / 1</span>
+              <button class="next">Próximo</button>
             </div>
           </div>
         </div>
