--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="grid">
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#services">Acrósticos</a></li>
             <li><a class="title" href="#testimonials">Depoimentos</a></li>
             <li><a class="title" href="#contact">Contato</a></li>
           </ul>
@@ -108,7 +108,7 @@
       <section class="section" id="services">
         <div class="container grid">
           <header>
-            <h2 class="title">Serviços</h2>
+            <h2 class="title">Acrósticos</h2>
             <p class="subtitle">
               <p>Criamos sites e turbinamos PC's.</p>
               Traga seu PC <i><b>presencialmente</b></i> ou, se preferir, deixe que nós da 
