--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
           <div class="pagination-container">
             <!-- Controles de Paginação -->
             <div class="pagination">
-              <button class="prev" disabled>Anterior</button>
+              <a class="prev" disabled>&larr;</a>
               <span class="page-indicator">1 / 1</span>
-              <button class="next">Próximo</button>
+              <a class="next">&rarr;</a>
             </div>
 
             <div class="cards-wrapper">
@@ -130,9 +130,9 @@
           
             <!-- Controles de Paginação -->
             <div class="pagination">
-              <button class="prev" disabled>Anterior</button>
+              <a class="prev" disabled href="#services">&larr;</a>
               <span class="page-indicator">1 / 1</span>
-              <button class="next">Próximo</button>
+              <a class="next" href="#services">&rarr;</a>
             </div>
           </div>
         </div>
