disable pagination style

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
           <div class="pagination-container">
             <!-- Controles de Paginação -->
             <div class="pagination">
-              <a class="prev" disabled>&larr;</a>
+              <button class="prev" disabled><a>&larr;</a></button>
               <span class="page-indicator">1 / 1</span>
-              <a class="next">&rarr;</a>
+              <button class="next"><a>&rarr;</a></button>
             </div>
 
             <div class="cards-wrapper">
@@ -130,9 +130,9 @@
           
             <!-- Controles de Paginação -->
             <div class="pagination">
-              <a class="prev" disabled href="#services">&larr;</a>
+              <button class="prev" disabled><a href="#services">&larr;</a></button>
               <span class="page-indicator">1 / 1</span>
-              <a class="next" href="#services">&rarr;</a>
+              <button class="next"><a href="#services">&rarr;</a></button>
             </div>
           </div>
         </div>
