--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src=""
+              src="assets/imgs/photo-1.jpg"
               alt="computador"
             />
           </div>
