contact send acrostic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="sortcut icon" href="favicon.ico"/>
-    <title>EasyPCFormat</title>
+    <title>Ibiajara em Acróstico</title>
 
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
@@ -29,7 +29,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">easy<span>{</span>PC<span>}Format</span>.</a>
+        <a class="logo" href="#"><span>Ibiajara</span> em <span>A</span>c<span>r</span>ó<span>s</span>t<span>i</span>c<span>o</span></a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
@@ -62,7 +62,7 @@
               De formatação à upgrade, tudo o que seu PC precisa para se tornar uma máquina!
               Se deseja ter um site próprio, conte conosco também!
             </p>
-            <a class="button" href="#contact">Entrar em contato</a>
+            <a class="button" href="#services">Envie o seu acróstico</a>
           </div>
         </div>
       </section>
@@ -110,10 +110,7 @@
           <header>
             <h2 class="title">Acrósticos</h2>
             <p class="subtitle">
-              <p>Criamos sites e turbinamos PC's.</p>
-              Traga seu PC <i><b>presencialmente</b></i> ou, se preferir, deixe que nós da 
-              <strong>easyPCFormat</strong> o guiemos através de nossos serviços
-            <i><b>remotos</b></i>.
+              <p>Segue abaixo o meu acróstico (e de outros contribuintes), não como modelo, mas para que vocês tenham uma ideia da atividade sugerida.</p>
             </p>
           </header>
           <div class="pagination-container">
@@ -144,63 +141,39 @@
       <section class="section" id="testimonials">
         <div class="container">
           <header>
-            <h2 class="title">Depoimentos de alguns clientes</h2>
+            <h2 class="title">Envie o seu Acróstico</h2>
+            <p class="subtitle">
+              <p>Use da criatividade e expresse, por meio do acróstico, seu amor por essa terra querida. Não há, necessariamente, necessidade de rimas; basta que faça sentido. Espero receber seu acróstico <b>até o dia primeiro de maio deste ano de 2025.</b></p>
+            </p>
           </header>
           <div class="testimonials box">
             <div class="testimonial swiper-slide">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Atendimento espetacular! Mesmo a quilômetros de distância a 
-                  easyPCFormat conseguiu solucionar o problema do meu notebook. 
-                  Super recomendo todos os serviços, de longe ou de perto!
-                </p>
-                <cite>
-                  <img
-                    src="assets/fotos/manu.PNG"
-                    alt="Foto cliente 1"
-                  />
-                  Manuella Azevedo @manuellazs
-                </cite>
-              </blockquote>
+              <div class="text">
+                <a
+                  href="https://api.whatsapp.com/send?phone=+5577991944459&text=Oi! Gostaria de enviar meu Acróstico para o projeto: IBIAJARA EM ACRÓSTICO."
+                  class="button"
+                  target="_blank"
+                  ><i class="icon-whatsapp"></i> Entrar em contato</a
+                >
+              </div>
             </div>
 
             <div class="testimonial swiper-slide">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Comprei um notebook com linux, levei na easyPCFormat e eles 
-                  formataram para o Windows rapidinho! Quando eu for dar um 
-                  upgrade no meu note com certeza irei contratá-los de novo.
-                </p>
-                <cite>
-                  <img
-                    src="assets/fotos/humberto.PNG"
-                    alt="Foto cliente 2"
-                  />
-                  Humberto Hithelli @hithelliporto
-                </cite>
-              </blockquote>
-            </div>
-
-            <div class="testimonial swiper-slide">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Meu notebook era uma carroça! Contratei a easyPCFormat e eles 
-                  fizeram um milagre! Meu notebook agora tá rodando liso e 
-                  rápido. Obrigado!
-                </p>
-                <cite>
-                  <img
-                    src="assets/fotos/du.PNG"
-                    alt="Foto cliente 3"
-                  />
-                  Carlos Eduardo @carloseduarded
-                </cite>
-              </blockquote>
+              <div class="text">
+                <a
+                  href="mailto:dlima49@gmail.com "
+                  class="button"
+                  target="_blank"
+                  ><i class="icon-mail"></i> Enviar acróstico por E-mail</a
+                >
+              </div>
             </div>
           </div>
+          <header>
+            <p class="asterisc">
+              *Ao enviar seu acróstico, você concorda que ele será analisado e, caso o projeto tenha sucesso, poderá ser incluído no livro 'Ibiajara em Acróstico', sem necessidade de compensação financeira ou autorização adicional.
+            </p>
+          </header>
         </div>
       </section>
 
@@ -216,7 +189,7 @@
               fazer seu orçamento, ouvir suas críticas e sugestões.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=+5577991998770&text=Oi! Gostaria de saber mais sobre os serviços da easyPCFormat."
+              href="https://api.whatsapp.com/send?phone=+5577991944459&text=Oi! Gostaria de enviar meu Acróstico para o projeto: IBIAJARA EM ACRÓSTICO."
               class="button"
               target="_blank"
               ><i class="icon-whatsapp"></i> Entrar em contato</a
