--- a/index.html
+++ b/index.html
@@ -74,29 +74,22 @@
         <div class="container grid">
           <div class="image">
             <img
-              src=""
+              src="assets/imgs/photo-2.jpg"
               alt="sobre nós"
             />
           </div>
           <div class="text">
-            <h2 class="title">Sobre nós</h2>
+            <h2 class="title">Inspiração</h2>
             <p>
-              Somos uma empresa especializada tanto na criação de sites modernos
-              quanto na formatação e upgrade de PC's e Notebooks. Oferecemos 
-              nossos serviços de forma <i>PRESENCIAL</i> ou <i>REMOTA</i>, facilitando sua 
-              vida de perto ou de longe.
+              Em uma das oficinas de música em língua inglesa, realizadas em Ibiajara, em janeiro de 2025, trabalhamos a música cantada por Nat King Cole chamada <b>L.O.V. E.</b> - a letra da música forma um acróstico com a palavra <b>LOVE</b>.
             </p>
             <br />
             <p>
-              Se seu PC precisa de formatação, ou necessita fazer upgrade de 
-              HD para SSD ou de memória, conte conosco! Se ainda não comprou seu 
-              ssd ou memória, deixe que nós compramos e instalamos para você! 
-              Preço na faixa!
+              Acróstico é um tipo de poesia em que, juntando cada letra, no início de cada verso, sempre na vertical, forma uma palavra ou uma frase.
             </p>
-            <br />
+            </br>
             <p>
-              E mais! Atualização da BIOS e de drivers, instalação do Windows
-              e do pacote Office, entre outros serviços.
+              Como "tarefa", pedi aos participantes da Oficina para formar um acróstico com a palavra IBIAJARA e surgiram algumas produções bem interessantes. Daí me veio a ideia de transformar essa atividade em um projeto maior, pedindo às pessoas para fazerem um acróstico com a frase: <b>IBIAJARA, MEU AMOR.</b>
             </p>
           </div>
         </div>
@@ -143,6 +136,8 @@
           <header>
             <h2 class="title">Envie o seu Acróstico</h2>
             <p class="subtitle">
+              <p>Faça um acróstico com a frase: <b>IBIAJARA, MEU AMOR.</b></p>
+              </br>
               <p>Use da criatividade e expresse, por meio do acróstico, seu amor por essa terra querida. Não há, necessariamente, necessidade de rimas; basta que faça sentido. Espero receber seu acróstico <b>até o dia primeiro de maio deste ano de 2025.</b></p>
             </p>
           </header>
