--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="sortcut icon" href="favicon.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Ibiajara em Acróstico</title>
 
     <!-- Icones -->
@@ -29,15 +31,14 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#"><span>Ibiajara</span> em <span>A</span>c<span>r</span>ó<span>s</span>t<span>i</span>c<span>o</span></a>
+        <a class="logo" href="#"><span>Ibiajara</span> em <span>A</span>c<span>r</span>ó<span>s</span>t<span>i</span>c<span>o</span>.</a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
-            <li><a class="title" href="#home">Início</a></li>
-            <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="#services">Acrósticos</a></li>
-            <li><a class="title" href="#testimonials">Depoimentos</a></li>
-            <li><a class="title" href="#contact">Contato</a></li>
+            <li><a class="title" href="#inicio">Início</a></li>
+            <li><a class="title" href="#sobre">Sobre</a></li>
+            <li><a class="title" href="#acrosticos">Acrósticos</a></li>
+            <li><a class="title" href="#enviar">Envie o seu</a></li>
           </ul>
         </div>
         <!-- /menu -->
@@ -47,8 +48,8 @@
     </header>
 
     <main>
-      <!-- HOME -->
-      <section class="section" id="home">
+      <!-- inicio -->
+      <section class="section" id="inicio">
         <div class="container grid">
           <div class="image">
             <img
@@ -57,20 +58,19 @@
             />
           </div>
           <div class="text">
-            <h2 class="title">Sites e Serviços <i>remotos</i> ou <i>presenciais</i> para seu PC!</h2>
+            <h2 class="title">Diógenes Cândido de Lima</h2>
             <p>
-              De formatação à upgrade, tudo o que seu PC precisa para se tornar uma máquina!
-              Se deseja ter um site próprio, conte conosco também!
+              Transforme suas palavras em poesia! Crie um acróstico com 'IBIAJARA, MEU AMOR' e compartilhe seu carinho por nossa terra.
             </p>
-            <a class="button" href="#services">Envie o seu acróstico</a>
+            <a class="button" href="#sobre">Saiba mais</a>
           </div>
         </div>
       </section>
 
       <div class="divider-1"></div>
 
-      <!-- ABOUT -->
-      <section class="section" id="about">
+      <!-- sobre -->
+      <section class="section" id="sobre">
         <div class="container grid">
           <div class="image">
             <img
@@ -91,14 +91,16 @@
             <p>
               Como "tarefa", pedi aos participantes da Oficina para formar um acróstico com a palavra IBIAJARA e surgiram algumas produções bem interessantes. Daí me veio a ideia de transformar essa atividade em um projeto maior, pedindo às pessoas para fazerem um acróstico com a frase: <b>IBIAJARA, MEU AMOR.</b>
             </p>
+            </br>
+            <a class="button" href="#acrosticos">Ver exemplos</a>
           </div>
         </div>
       </section>
 
       <div class="divider-2"></div>
 
-      <!-- SERVICES -->
-      <section class="section" id="services">
+      <!-- acrosticos -->
+      <section class="section" id="acrosticos">
         <div class="container grid">
           <header>
             <h2 class="title">Acrósticos</h2>
@@ -120,10 +122,12 @@
           
             <!-- Controles de Paginação -->
             <div class="pagination">
-              <button class="prev" disabled><a href="#services">&larr;</a></button>
+              <button class="prev" disabled><a href="#acrosticos">&larr;</a></button>
               <span class="page-indicator">1 / 1</span>
-              <button class="next"><a href="#services">&rarr;</a></button>
+              <button class="next"><a href="#acrosticos">&rarr;</a></button>
             </div>
+            </br>
+            <a class="button" href="#enviar">Envie o seu acróstico</a>
           </div>
         </div>
       </section>
@@ -131,7 +135,7 @@
       <div class="divider-1"></div>
 
       <!-- TESTIMONIALS -->
-      <section class="section" id="testimonials">
+      <section class="section" id="enviar">
         <div class="container">
           <header>
             <h2 class="title">Envie o seu Acróstico</h2>
@@ -173,58 +177,29 @@
       </section>
 
       <div class="divider-2"></div>
-
-      <!-- CONTACT -->
-      <section class="section" id="contact">
-        <div class="container grid">
-          <div class="text">
-            <h2 class="title">Entre em contato com a gente!</h2>
-            <p>
-              Entre em contato com a easyPCFormat, queremos tirar suas dúvidas,
-              fazer seu orçamento, ouvir suas críticas e sugestões.
-            </p>
-            <a
-              href="https://api.whatsapp.com/send?phone=+5577991944459&text=Oi! Gostaria de enviar meu Acróstico para o projeto: IBIAJARA EM ACRÓSTICO."
-              class="button"
-              target="_blank"
-              ><i class="icon-whatsapp"></i> Entrar em contato</a
-            >
-          </div>
-
-          <div class="links">
-            <ul class="grid">
-              <li><i class="icon-whatsapp"></i> 77 99199-8770</li>
-              <li><i class="icon-map-pin"></i>Belo Horizonte - MG</li>
-              <li><i class="icon-mail"></i> easypcformat@gmail.com</li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <div class="divider-1"></div>
     </main>
 
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">easy<span>{</span>PC<span>}Format</span>.</a>
-          <p>©2021 easyPCFormat.</p>
+          <a class="logo logo-alt" href="#inicio"><span>Ibiajara em Acróstico.</a>
+          <p>Diógenes Cândido de Lima</p>
+          <p>©2025 Ibiajara em Acróstico</p>
+          </br>
           <p>Todos os direitos reservados.</p>
-          <p>Manoel Prado</p>
+          </br>
+          <p>Página desenvolvida por: <a style="text-decoration: underline; color: inherit;" href="https://www.linkedin.com/in/manoelpradomark22/" target="_blank"><b>Manoel Prado</b> <i class="fa-brands fa-linkedin"></i></a></p>
         </div>
 
         <div class="social grid">
-          <a href="https://www.instagram.com/easypcformat/" target="_blank">
+          <a href="https://www.instagram.com/diogenes6451/" target="_blank">
             <i class="icon-instagram"></i>
           </a>
-          <a href="https://www.youtube.com/channel/UCwSVBuTnDBQ20QDg-scpHsA" target="_blank"
-            ><i class="icon-youtube"></i
-          ></a>
         </div>
       </div>
     </footer>
 
-    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+    <a href="#inicio" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
