--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="text">
             <h2 class="title">Inspiração</h2>
             <p>
-              Em uma das oficinas de música em língua inglesa, realizadas em Ibiajara, em janeiro de 2025, trabalhamos a música cantada por Nat King Cole chamada <b>L.O.V. E.</b> - a letra da música forma um acróstico com a palavra <b>LOVE</b>.
+              Em uma das oficinas de música em língua inglesa, realizada em Ibiajara, em janeiro de 2025, trabalhamos a música cantada por Nat King Cole chamada <b>L.O.V. E.</b> - a letra da música forma um acróstico com a palavra <b>LOVE</b>.
             </p>
             <br />
             <p>
